# SFML-Learning

./: .gitignore  CMakeLists.txt
include/: Entity.hpp  Game.hpp  ResourceHolder.hpp  SceneNode.hpp  Spaceship.hpp  constexprVars.hpp  identifiers.hpp
src/: Entity.cpp  Game.cpp  HelloWorld.cpp  SceneNode.cpp  Spaceship.cpp  main.cpp
